# ruvnl-consumer-app

./: .all-contributorsrc  .bumpversion.cfg  .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
ruvnl_consumer_app/: __init__.py  app.py
scripts/: getdata.py  seed_local_db.py
tests/: _utils.py  conftest.py  test_app.py
