[tool.poetry]
name = "ruvnl-consumer-app"
version = "0.1.15"
description = "Scrapes and saves data from the Rajasthan Urja Vikas Nigam Limited (RUVNL) website."
authors = ["Chris Briggs <confusedmatrix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pvsite-datamodel = "^1.0.10"
pandas = "1.5.3"
requests = "^2.31.0"
freezegun = "^1.1.0"
sentry-sdk = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
ruff = "^0.1.11"
testcontainers = "^3.7.1"
requests-mock = "^1.11.0"

[tool.poetry.scripts]
app = "ruvnl_consumer_app.app:app"
seeder = "scripts.seed_local_db:seed_db"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["B", "E", "F", "D", "I"]
ignore = ["D200","D202","D210","D212","D415","D105",]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"
fix = false

# Group violations by containing file.
#output-format = "github"
ignore-init-module-imports = true

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[tool.coverage.run]
omit = ["tests/*", "scripts/*"]

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"
